# al-report

./: .capstone-companion-check.json  .env  agent_core.py  chainlit_app.py  main.py  package-lock.json  package.json  pyproject.toml  session.jsonl  skills-lock.json
.agents/skills/felo-cli/: SKILL.md
builtin_skills/summarize/: SKILL.md
memory/: HISTORY.md  MEMORY.md
report/: .capstone-progress.md  build_docx.py  build_poster.py  poster-prompt.txt  ppt-style.json  project-architecture.mmd  專題報告.docx  專題報告.md  專題報告.pptx
skills/class-helper/: SKILL.md
studio_shell/: .agent_core_activated  app.py
studio_shell/pages/: 4_Food_Order_Kiosk.py  5_Delivery_Tracking.py  6_Send_Package.py  6_Shipping_Form.py  7_來寄件吧.py
studio_shell/sessions/: session_20260603_142434_7bede0.jsonl
studio_shell/workspace/: user_settings.json
